--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,84 @@
-<!doctype html>
+---
+import "@/styles/globals.css";
+import { Image } from "astro:assets";
+import { getEntry } from "astro:content";
+
+interface Props {
+	title: string;
+	description?: string;
+}
+
+const license = await getEntry({ collection: "policy", slug: "license" });
+const privacy_policy = await getEntry({
+	collection: "policy",
+	slug: "privacy-policy",
+});
+const date = new Date().getFullYear();
+
+const { title, description } = Astro.props;
+---
+
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="description" content={description} />
+		<title>{title} | Naparajith</title>
 	</head>
 	<body>
+		{
+			Astro.url.pathname !== "/" ? (
+				<header class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4">
+					<h2>
+						<span class="relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-primary after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100">
+							Naparajith's Personal Site
+						</span>
+					</h2>
+					<span class="flex flex-wrap gap-4">
+						<a href="/">Home</a>
+						<a href="/bio">About Me</a>
+						<a href="/quick-view">Quick View</a>
+					</span>
+				</header>
+			) : (
+				<div class="mb-20" />
+			)
+		}
 		<slot />
+		<footer
+			class="mt-10 flex flex-col-reverse flex-wrap items-center justify-center border border-b-0 border-l-0 border-r-0 border-border pt-4 md:flex-row md:justify-between"
+		>
+			<a
+				href="https://brainmade.org/"
+				title="The Brainmade Mark"
+				target="_blank"
+			>
+				<Image
+					src={"/src/images/brain-made.png"}
+					alt={"This site was built without using AI"}
+					class="xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
+					width={160}
+					height={50}
+				/>
+			</a>
+			<p
+				class="relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-primary after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100"
+			>
+				Copyright &copy; {date}, Naparajith
+			</p>
+			<span class="flex justify-between ~gap-2/4">
+				<a href={`/policy/${license.id}`} title={license.data.title}>
+					{license.data.title}
+				</a>
+				<a
+					href={`/policy/${privacy_policy.id}`}
+					title={privacy_policy.data.title}
+				>
+					{privacy_policy.data.title}
+				</a>
+			</span>
+		</footer>
 	</body>
 </html>
