--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import { GithubProfile } from "@/actions/github-profile";
 import { LeetcodeProfile } from "@/actions/leetcode-profile";
 import Layout from "@/layouts/Layout.astro";
