feat: new 500 error page and improved 404 error page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import Layout from "@/layouts/Layout.astro";
 			404 | The Page you are looking for has moved or doesn't exist ;(
 		</h3>
 		<p class="text-justify">
-			Try looking for another page or better, go back home and start
+			Try looking for another page or better, go back home to start
 			navigating again. Sorry for any inconviences caused!
 		</p>
 		<a href="/" class="mx-auto place-self-center">
