--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "@/styles/globals.css";
 import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
 	title: string;
@@ -26,11 +27,16 @@ const { title, description } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
 		<title>{title} | Naparajith</title>
+
+		<ViewTransitions />
 	</head>
 	<body>
 		{
 			Astro.url.pathname !== "/" ? (
-				<header class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4">
+				<header
+					class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
+					transition:persist
+				>
 					<h2>
 						<span class="relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-primary after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100">
 							Naparajith's Personal Site
@@ -49,6 +55,7 @@ const { title, description } = Astro.props;
 		<slot />
 		<footer
 			class="mt-10 flex flex-col-reverse flex-wrap items-center justify-center border border-b-0 border-l-0 border-r-0 border-border pt-4 md:flex-row md:justify-between"
+			transition:persist
 		>
 			<a
 				href="https://brainmade.org/"
