--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import "@/styles/globals.css";
 import { Image } from "astro:assets";
-import { getEntry } from "astro:content";
+import { getCollection, getEntry } from "astro:content";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
 	title: string;
@@ -13,6 +14,9 @@ const privacy_policy = await getEntry({
 	collection: "policy",
 	slug: "privacy-policy",
 });
+
+const policy = await getCollection("policy");
+
 const date = new Date().getFullYear();
 
 const { title, description } = Astro.props;
@@ -26,11 +30,16 @@ const { title, description } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
 		<title>{title} | Naparajith</title>
+
+		<ViewTransitions />
 	</head>
 	<body>
 		{
 			Astro.url.pathname !== "/" ? (
-				<header class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4">
+				<header
+					class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
+					transition:persist
+				>
 					<h2>
 						<span class="relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-primary after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100">
 							Naparajith's Personal Site
@@ -49,6 +58,7 @@ const { title, description } = Astro.props;
 		<slot />
 		<footer
 			class="mt-10 flex flex-col-reverse flex-wrap items-center justify-center border border-b-0 border-l-0 border-r-0 border-border pt-4 md:flex-row md:justify-between"
+			transition:persist
 		>
 			<a
 				href="https://brainmade.org/"
@@ -69,7 +79,12 @@ const { title, description } = Astro.props;
 				Copyright &copy; {date}, Naparajith
 			</p>
 			<span class="flex justify-between ~gap-2/4">
-				<a href={`/policy/${license.id}`} title={license.data.title}>
+				{
+					policy.map((policy) => (
+						<a href={`/policy/${policy.id}`}>{policy.data.title}</a>
+					))
+				}
+				<!-- <a href={`/policy/${license.id}`} title={license.data.title}>
 					{license.data.title}
 				</a>
 				<a
@@ -77,7 +92,7 @@ const { title, description } = Astro.props;
 					title={privacy_policy.data.title}
 				>
 					{privacy_policy.data.title}
-				</a>
+				</a> -->
 			</span>
 		</footer>
 	</body>
