--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const github = await GithubProfile();
 	</main>
 	<div class="flex flex-wrap border border-border ~gap-2/4 ~p-2/4">
 		<a href="/bio">About Me</a>
-		<a href="/quick-view">Quick View</a>
+		<a href="/quick-view" data-astro-prefetch="load">Quick View</a>
 		<a href="/quotes">Quotes</a>
 		<a href="/policy/license.md">License</a>
 	</div>
