--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,11 +39,15 @@ const { title, description } = Astro.props;
 							Naparajith's Personal Site
 						</span>
 					</h2>
-					<span class="flex flex-wrap gap-4">
-						<a href="/">Home</a>
-						<a href="/bio">About Me</a>
-						<a href="/quick-view">Quick View</a>
-					</span>
+
+					<div class="flex justify-between">
+						<span class="flex flex-wrap gap-4">
+							<a href="/">Home</a>
+							<a href="/bio">About Me</a>
+							<a href="/quick-view">Quick View</a>
+						</span>
+						<button onclick="history.back()">Back</button>
+					</div>
 				</header>
 			) : (
 				<div class="mb-20" />
@@ -62,7 +66,7 @@ const { title, description } = Astro.props;
 				<Image
 					src={"/brain-made.png"}
 					alt={"This site was built without using AI"}
-					class="xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
+					class="~size-0/0 xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
 					width={160}
 					height={50}
 				/>
