test: image optimisations

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,7 +64,7 @@ const { title, description } = Astro.props;
 				target="_blank"
 			>
 				<Image
-					src={"/brain-made.png"}
+					src={"/src/images/brain-made.png"}
 					alt={"This site was built without using AI"}
 					class="~size-0/0 xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
 					width={160}
