fix: children-of-the-soil image optimisation

--- a/src/pages/children-of-the-soil/[slug].astro
+++ b/src/pages/children-of-the-soil/[slug].astro
@@ -25,8 +25,7 @@ const { Content } = await render(child);
 		<Image
 			src={child.data.image}
 			alt={child.data.full_name}
-			width={2262}
-			height={2928}
+			inferSize
 			class="mx-auto place-items-center object-cover ~size-48/96"
 		/>
 		<figcaption class="text-center">
