--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -14,6 +14,7 @@ const leetcode = await LeetcodeProfile();
 	description="A collection of Quick Links for my personal website"
 >
 	<h2>Quick View</h2>
+	<h3>Links</h3>
 	<ul>
 		<li>
 			<a
@@ -60,7 +61,7 @@ const leetcode = await LeetcodeProfile();
 		</li>
 	</ul>
 	<div>
-		<h4>GitHub Stats</h4>
+		<h3>GitHub Stats</h3>
 		<ol>
 			<li>Repositories: <strong>{github.public_repos}</strong></li>
 			<li>Followers: <strong>{github.followers}</strong></li>
@@ -68,7 +69,7 @@ const leetcode = await LeetcodeProfile();
 		</ol>
 	</div>
 	<div>
-		<h4>LeetCode Stats</h4>
+		<h3>LeetCode Stats</h3>
 		<ol>
 			<li>Rank: <strong>{leetcode.profile?.ranking}</strong></li>
 			<li>
