--- a/src/pages/quotes/index.astro
+++ b/src/pages/quotes/index.astro
@@ -7,7 +7,7 @@ quotes.sort((a, b) => parseInt(a.id) - parseInt(b.id));
 ---
 
 <Layout title="Quotes">
-	<h3>Quote Collection</h3>
+	<h3>Quotes I Like</h3>
 	<p>
 		A collection of quotes from various people that I resonate with and want
 		to share with a wider audience.
