--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,12 +35,7 @@ const { title, description } = Astro.props;
 					class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
 					transition:persist
 				>
-					<h2>
-						<span class="relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-primary after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100">
-							Naparajith's Personal Site
-						</span>
-					</h2>
-
+					<h2>Naparajith's Personal Site</h2>
 					<div class="flex justify-between">
 						<span class="flex flex-wrap gap-4">
 							<a href="/">Home</a>
@@ -56,26 +51,26 @@ const { title, description } = Astro.props;
 		}
 		<slot />
 		<footer
-			class="mt-10 flex flex-col-reverse flex-wrap items-center justify-center border border-b-0 border-l-0 border-r-0 border-border pt-4 md:flex-row md:justify-between"
+			class="mt-10 flex flex-col-reverse items-center justify-center border-t border-border pt-4 md:flex-row md:justify-between"
 			transition:persist
 		>
 			<a
 				href="https://brainmade.org/"
 				title="The Brainmade Mark"
 				target="_blank"
+				class="-my-6"
 			>
 				<Image
 					src={brainMade}
 					alt={"This site was built without using AI"}
-					class="~size-0/0 xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
+					class="xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
 					width={160}
 					height={50}
+					loading={"lazy"}
 				/>
 			</a>
-			<p
-				class="relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-primary after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100"
-			>
-				Copyright &copy; {date}, Naparajith
+			<p>
+				Copyright &copy; {date}, Naparajith.
 			</p>
 			<span class="flex justify-between ~gap-2/4">
 				{
