fix: updated styles and header text

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title, description } = Astro.props;
 					class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
 					transition:persist
 				>
-					<h2>Naparajith's Personal Site</h2>
+					<h2>Naparajith's Portfolio</h2>
 					<div class="flex justify-between">
 						<span class="flex flex-wrap gap-4">
 							<a href="/">Home</a>
