feat: renamed files and folders to better suit overall content structure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const github = await GithubProfile();
 				class="mx-auto place-items-center object-cover ~size-48/96"
 			/>
 			<figcaption class="text-center">
-				The image comes from my <a
+				This image comes from my <a
 					href={github.html_url}
 					target="_blank"
 				>
@@ -46,9 +46,7 @@ const github = await GithubProfile();
 			Quick View
 		</a>
 		<a href="/quotes" title="Quotes">Quotes</a>
-		<a href="/children-of-the-soil" title="Children of the Soil"
-			>Children of the Soil</a
-		>
+		<a href="/indian-legends" title="Indian Legends">Indian Legends</a>
 		<a href="/policy/license.md" title="License">License</a>
 	</div>
 </Layout>
