--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,7 +67,7 @@
 		@apply rounded border border-black bg-gray-200 px-2 font-semibold hover:bg-gray-300;
 	}
 	a {
-		@apply text-primary hover:text-primary/80 hover:decoration-double hover:underline-offset-4;
+		@apply text-primary hover:text-primary/80 hover:decoration-double;
 	}
 	p {
 		@apply text-justify;
