--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,7 +53,7 @@ const { title, description } = Astro.props;
 		}
 		<slot />
 		<footer
-			class="mt-10 flex flex-col-reverse items-center justify-center border-t border-border pt-4 md:flex-row md:justify-between"
+			class="mt-10 flex flex-col-reverse items-center justify-evenly border-t border-border pt-4 md:flex-row"
 			transition:persist
 		>
 			<a
@@ -65,7 +65,7 @@ const { title, description } = Astro.props;
 				<Image
 					src={brainMade}
 					alt={"This site was built without using AI"}
-					class="xs:scale-[50%] sm:scale-[60%] md:scale-[80%] lg:scale-[90%] xl:scale-100"
+					class="xs:scale-50 sm:scale-[60%] md:scale-[70%] lg:scale-[80%] xl:scale-90 2xl:scale-100"
 					width={160}
 					height={50}
 					loading={"lazy"}
@@ -74,7 +74,7 @@ const { title, description } = Astro.props;
 			<p>
 				Copyright &copy; {date}, Naparajith.
 			</p>
-			<span class="flex justify-between ~gap-2/4">
+			<span class="flex flex-row justify-between ~gap-2/4">
 				{
 					policy.map((policy) => (
 						<a
