--- a/src/pages/indian-legends/index.astro
+++ b/src/pages/indian-legends/index.astro
@@ -45,7 +45,6 @@ const legends = await getCollection("indian-legends");
 							<a
 								href={`/indian-legends/${legend.id}`}
 								title={legend.data.full_name}
-								transition:name={legend.data.name}
 							>
 								{legend.data.name}
 							</a>
@@ -54,9 +53,7 @@ const legends = await getCollection("indian-legends");
 							<p>{legend.data.description}</p>
 						</td>
 						<td>
-							<p transition:name={legend.data.opinion}>
-								{legend.data.opinion}
-							</p>
+							<p>{legend.data.opinion}</p>
 						</td>
 					</tr>
 				))
