--- a/src/pages/indian-legends/[slug].astro
+++ b/src/pages/indian-legends/[slug].astro
@@ -20,7 +20,7 @@ const { Content } = await render(child);
 	title={`${child.data.name} | Children of the Soil`}
 	description={child.data.opinion}
 >
-	<h1 class="text-center" transition:name={child.data.name}>
+	<h1 class="text-center">
 		{child.data.name}
 	</h1>
 	<figure>
@@ -42,7 +42,7 @@ const { Content } = await render(child);
 		</figcaption>
 	</figure>
 	<article>
-		<p transition:name={child.data.opinion}>{child.data.opinion}</p>
+		<p>{child.data.opinion}</p>
 		<h2>Overview</h2>
 		<ul>
 			<li><strong>Full Name: </strong>{child.data.full_name}</li>
