feat: implemented site-wide dark mode

--- a/src/pages/indian-legends/index.astro
+++ b/src/pages/indian-legends/index.astro
@@ -32,9 +32,9 @@ const legends = await getCollection("indian-legends");
 	<table class="table-auto">
 		<thead>
 			<tr>
-				<th>Name</th>
-				<th>Description</th>
-				<th>Legacy</th>
+				<th class="text-primary">Name</th>
+				<th class="text-primary">Description</th>
+				<th class="text-primary">Legacy</th>
 			</tr>
 		</thead>
 		<tbody>
