--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,14 +60,17 @@
 }
 
 @layer base {
+	* {
+		@apply dark;
+	}
 	body {
 		@apply container prose prose-sm mx-auto scroll-smooth bg-background text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold;
 	}
 	button {
-		@apply rounded border border-black bg-gray-200 px-2 font-semibold hover:bg-gray-300;
+		@apply rounded border bg-primary px-2 font-semibold text-primary-foreground hover:bg-primary/90;
 	}
 	a {
-		@apply text-primary hover:text-primary/80 hover:decoration-double;
+		@apply text-primary decoration-sky-500 hover:decoration-2 md:decoration-2 md:hover:decoration-4;
 	}
 	p {
 		@apply text-justify;
@@ -91,5 +94,8 @@
 	}
 	details[open] summary {
 		@apply border border-l-0 border-r-0 border-t-0 border-border ~pt-4/8;
+	}
+	code {
+		@apply text-primary;
 	}
 }
