--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,6 +92,9 @@
 	summary {
 		@apply font-semibold;
 	}
+	blockquote {
+		@apply font-serif font-semibold text-primary ~text-sm/3xl;
+	}
 	details[open] summary {
 		@apply border border-l-0 border-r-0 border-t-0 border-border ~pt-4/8;
 	}
