fix: updated button styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,7 +51,11 @@ const { title, description } = Astro.props;
 							<a href="/bio">About Me</a>
 							<a href="/quick-view">Quick View</a>
 						</span>
-						<button onclick="history.back()">Back</button>
+						<button onclick="history.back()">
+							<span class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent">
+								Back
+							</span>
+						</button>
 					</div>
 				</header>
 			) : (
