--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,12 +39,12 @@ const learning = [
 		<p><strong>{github.bio}</strong></p>
 	</article>
 	<div class="flex flex-wrap border border-border ~gap-2/4 ~p-2/4">
-		<a href="/bio" title="Bio">About Me</a>
+		<a href="/profile" title="Bio">Profile</a>
 		<a href="/quick-view" title="Quick View" data-astro-prefetch="load">
 			Quick View
 		</a>
 		<a href="/quotes" title="Quotes">Quotes</a>
-		<a href="/indian-legends" title="Indian Legends">Indian Legends</a>
+		<a href="/legends" title="Legends">Legends</a>
 		<a href="/policy/license.md" title="License">License</a>
 	</div>
 	<main>
@@ -88,7 +88,7 @@ const learning = [
 					title="E-Mail Address"
 					target="_blank"
 				>
-					naparajith@duck.com
+					naparajith@duck.com.
 				</a>
 			</p>
 		</div>
