--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title, description } = Astro.props;
 					<div class="flex justify-between">
 						<span class="flex flex-wrap gap-4">
 							<a href="/">Home</a>
-							<a href="/bio">About Me</a>
+							<a href="/profile">Profile</a>
 							<a href="/quick-view">Quick View</a>
 						</span>
 						<button onclick="history.back()">
