feat: updated SEO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,10 @@ const learning = [
 ];
 ---
 
-<Layout title="Home">
+<Layout
+	title="Home"
+	description="The personal portfolio of T L Naparajith, a Software Engineer form India."
+>
 	<h1 class="text-center">{github.name}</h1>
 	<article>
 		<figure>
