--- a/src/pages/legends/index.astro
+++ b/src/pages/legends/index.astro
@@ -5,7 +5,10 @@ import { getCollection } from "astro:content";
 const legends = await getCollection("indian-legends");
 ---
 
-<Layout title="Legends">
+<Layout
+	title="Legends"
+	description='A dedicated page with a collection of articles about "Indian Legends", a group of people cemented in legend for their contributions towards the growth, progress, security and freedom of the wonderful nation of India.'
+>
 	<article>
 		<h2>What is this?</h2>
 		<p>
