--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -5,7 +5,10 @@ import { getCollection } from "astro:content";
 const bio = await getCollection("bio");
 ---
 
-<Layout title="Bio">
+<Layout
+	title="Profile"
+	description="The official profile page for T L Naparajith, a Software Engineer from India"
+>
 	<article>
 		I know that you know that I know that you wanna know more Profile. So I
 		present to you, two options:
