--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import "@fontsource/geist-mono/900.css";
 
 interface Props {
 	title: string;
-	description?: string;
+	description: string;
 }
 
 const policy = await getCollection("policy");
@@ -33,7 +33,7 @@ const { title, description } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta name="generator" content={Astro.generator} property="" />
 		<meta name="description" content={description} />
 		<title>{title} | Naparajith</title>
 
