--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,10 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Contact">
+<Layout
+	title="Contact"
+	description="Get in touch with Naparajith, a Software Engineer from India."
+>
 	<h1>Contact</h1>
 	<p>
 		Get in touch with me through this form or by using the email
