--- a/src/pages/profile/[slug].astro
+++ b/src/pages/profile/[slug].astro
@@ -15,7 +15,7 @@ const { about } = Astro.props;
 const { Content } = await render(about);
 ---
 
-<Layout title={about.data.title}>
+<Layout title={about.data.title} description={about.data.title}>
 	<h1>
 		{about.data.title}
 	</h1>
