--- a/src/pages/quotes.astro
+++ b/src/pages/quotes.astro
@@ -6,7 +6,7 @@ const quotes = await getCollection("quotes");
 quotes.sort((a, b) => parseInt(a.id) - parseInt(b.id));
 ---
 
-<Layout title="Quotes">
+<Layout title="Quotes" description="A collection of quotes that I really like.">
 	<h1>Quotes I Like</h1>
 	<p>
 		A collection of quotes from various people that I resonate with and want
