--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,11 @@ const learning = [
 				learning, which goes something like this:
 			</p>
 			<figure>
-				<blockquote cite={"Unknown Hindu Shloka"}>
+				<blockquote
+					cite={process.env.NODE_ENV === "development"
+						? "http://localhost:4321/"
+						: "https://naparajith.vercel.app/"}
+				>
 					From the teacher is learned a quarter, a quarter from the
 					student's own intelligence, a quarter from fellow students,
 					and a quarter with the passage of time.
